# DS-design

./: .eslintrc.json  .gitignore  binding.gyp  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
addon/: .clang-format  .clang-tidy  CMakeLists.txt  addon.cc  bindings.ts  main.cc
addon/src/: cnfparser.hh  writeRes.cc  writeRes.hh
addon/src/core/final/: Clause.cc  Clause.hh  Cnf.cc  Cnf.hh  Dpll.cc  Dpll.hh
addon/src/core/origin/: Clause.cc  Clause.hh  Cnf.cc  Cnf.hh  Dpll.cc  Dpll.hh  Literal.hh  cnfparser.cc  cnfparser.hh
addon/src/sudoku/: GenCnf.cc  GenCnf.hh  genSudoku.cc  genSudoku.hh
src/: App.tsx  index.html  index.scss  index.ts  renderer.tsx
src/components/FModule/: index.tsx
src/components/InputFile/: index.scss  index.tsx
src/components/ProblemList/: index.tsx
src/components/ResModal/: index.scss  index.tsx
src/main/: index.ts  satIpc.ts
src/pages/BinaryPuzzle/: index.scss  index.tsx
src/pages/Index/: index.tsx
src/pages/SAT/: index.tsx
src/utils/: BSudoku.ts  DpllCenter.ts  cnf.ts  detectDir.ts  res.ts  writeRes.ts
typings/: typings.d.ts
